# etrobocon2026

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.MakeMovie  Makefile  Makefile.inc  README.md  app.cfg  app.cpp  app.h  create_line_trace_video.py  generate_dummy_images.py  video_creator_specification.md
.github/workflows/: build-check-camera.yaml  build-check-client.yaml  build.yaml  format-check.yaml  test-camera.yaml  test.yaml
camera_server/: Makefile.camera  camera_app  main.cpp
camera_server/modules/: SnapshotActionHandler.cpp  SnapshotActionHandler.h
camera_server/modules/actions/: ColorRegionDetectionActionHandler.cpp  ColorRegionDetectionActionHandler.h  SnapshotActionHandler.cpp  SnapshotActionHandler.h
camera_server/modules/camera/: CameraCapture.cpp  CameraCapture.h
camera_server/modules/image_processors/: BoundingBoxDetector.h  CodeDetector.h  ColorRegionDetector.cpp  ColorRegionDetector.h  ImageRecoginationResult.h  ImageRecognitionResults.h  QRCodeDetector.cpp  QRCodeDetector.h  QrCodeDetectionResult.h  QrCodeDetector.cpp  QrCodeDetector.h
camera_server/modules/server/: SocketServer.cpp  SocketServer.h
camera_server/modules/utils/: Decode.cpp  Decode.h  Decrypter.cpp  Decrypter.h  FrameSave.cpp  FrameSave.h
camera_server/tests/: ColorRegionDetectionActionHandlerTest.cpp  ColorRegionDetectorTest.cpp  DecodeTest.cpp  DecrypterTest.cpp  QrCodeDetectorTest.cpp  SocketServerTest.cpp
camera_server/tests/dummy/: MockCameraCapture.h
common/: CsvLogger.cpp  CsvLogger.h  Decrypter.cpp  Decrypter.h  FastCsvLogger.cpp  FastCsvLogger.h  INetworkSystem.h  ImageProcessingColor.cpp  ImageProcessingColor.h  ImageRecognitionResults.h  Logger.cpp  Logger.h  MockNetworkSystem.h  RealNetworkSystem.cpp  RealNetworkSystem.h  SocketProtocol.h  SystemInfo.h  logger.cpp  logger.h
common/customs/: Clock.h
datafiles/commands/Area/: LineTraceLeft.csv  LineTraceRight.csv
datafiles/commands/Conditions/: AbsoluteAngle.csv  Distance.csv  DistanceAndColor.csv  MotionTime.csv  RelativeAngle.csv  RepeatCount.csv  RunningTime.csv  SensorColor.csv
datafiles/commands/Motions/: AbsoluteRotation.csv  CDCL.csv  CameraTracking.csv  DCL.csv  DS.csv  EXAMPLE.csv  EdgeChange.csv  LINETRACE.csv  LineTrace.csv  RelativeRotation.csv  Straight.csv
datafiles/commands/Run/: run_LineTraceLeft.csv
module/: EtRobocon2026.h
modules/: Area.h  AreaMaster.cpp  AreaMaster.h  Calibrator.cpp  Calibrator.h  Course.h  CsvLogger.cpp  CsvLogger.h  EtRobocon2026.cpp  EtRobocon2026.h  Logger.cpp  Logger.h  MotionParser.cpp  MotionParser.h  Robot.cpp  Robot.h
modules/API/: ArmMotorController.cpp  ArmMotorController.h  BaseMotorController.cpp  BaseMotorController.h  BaterryController.cpp  BatteryController.h  ClockUtil.cpp  ClockUtil.h  ColorSensorController.cpp  ColorSensorController.h  IMUController.cpp  IMUController.h  MotorController.cpp  MotorController.h  UltraSonicController.cpp  UltraSonicController.h  WheelMotorController.cpp  WheelMotorController.h
modules/calculators/: AngleNormalizer.cpp  AngleNormalizer.h  ColorJudge.cpp  ColorJudge.h  Mileage.cpp  Mileage.h  Navigator.cpp  Navigator.h  Odometry.cpp  Odometry.h  Pid.cpp  Pid.h  Position.cpp  Position.h  SpeedCalculator.cpp  SpeedCalculator.h
modules/client/: SocketClient.cpp  SocketClient.h
modules/motions/: AbsoluteRotation.cpp  AbsoluteRotation.h  BaseMotion.cpp  BaseMotion.h  Calibrator.cpp  Calibrator.h  CameraTracking.cpp  CameraTracking.h  ChangeEdge.cpp  ChangeEdge.h  LineTrace.cpp  LineTrace.h  RelativeRotation.cpp  RelativeRotation.h  Rotation.cpp  Rotation.h  Snapshot.cpp  Snapshot.h  Straight.cpp  Straight.h
modules/motions/Client/: SocketClient.cpp  SocketClient.h
modules/motions/continuation_conditions/: AbsoluteAngleCondition.cpp  AbsoluteAngleCondition.h  AbsoluteAngleContinuationCondition.cpp  AbsoluteAngleContinuationCondition.h  AngleCondition.cpp  AngleCondition.h  AngleContinuationCondition.cpp  AngleContinuationCondition.h  BaseContinuationCondition.cpp  BaseContinuationCondition.h  ColorContinuationCondition.cpp  ColorContinuationCondition.h  CompoundCondition.cpp  CompoundCondition.h  CompoundContinuationCondition.cpp  CompoundContinuationCondition.h  DistanceCondition.cpp  DistanceCondition.h  MotionTimeCondition.cpp  MotionTimeCondition.h  MotionTimeContinuationCondition.cpp  MotionTimeContinuationCondition.h  RelativeAngleCondition.cpp  RelativeAngleCondition.h  RelativeAngleContinuationCondition.cpp  RelativeAngleContinuationCondition.h  RepeatCountCondition.cpp  RepeatCountCondition.h  RepeatCountContinuationCondition.cpp  RepeatCountContinuationCondition.h  RunningTimeCondition.cpp  (+5 more)
scripts/: CheckType.cpp  CommandMerger.cpp  check_type.sh  merge_commands.sh
scripts/create_video/: create_line_trace_video.py
tests/: AbsoluteAngleConditionTest.cpp  AbsoluteAngleContinuationConditionTest.cpp  AbsoluteRotationTest.cpp  AngleContinuationConditionTest.cpp  ArmMototControllerTest.cpp  BatteryControllerTest.cpp  CalibratorTest.cpp  CameraTrackingTest.cpp  ClockUtilTest.cpp  ColorContinuationConditionTest.cpp  ColorSensorControllerTest.cpp  CompoundCondition.cpp  CompoundConditionTest.cpp  CompoundContinuationCondition.cpp  CsvLoggerTest.cpp  DistanceConitionTest.cpp  EtRobocon2026Test.cpp  FastCsvLoggerTest.cpp  IMUControllerTest.cpp  LineTraceTest.cpp  LoggerTest.cpp  MileageTest.cpp  MotionParserTest.cpp  MotionTimeConditionTest.cpp  MotionTimeContinuationConditionTest.cpp  MotorControllerTest.cpp  PidTest.cpp  RelativeAngleConditionTest.cpp  RelativeAngleContinuationConditionTest.cpp  RelativeRotation.cpp  RelativeRotationTest.cpp  RepeatConditionTest.cpp  RepeatContinuationConditionTest.cpp  RobotTest.cpp  RunningTimeConditionTest.cpp  RunningTimeContinuationConditionTest.cpp  SensorColorConditionTest.cpp  SocketClientTest.cpp  SocketProtocolTest.cpp  SpeedCalculatorTest.cpp  (+4 more)
tests/dummy/: Battery.h  Button.h  Clock.h  ColorSensor.h  Display.h  ForceSensor.h  IMU.h  MockSocketClient.h  Port.h  UltrasonicSensor.h  spikeapi.h
tests/helpers/: OStreamCapture.cpp  OStreamCapture.h
(+8 files in other folders)
